--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="bg-gray-100 p-6">
-  <div class="max-w-3xl mx-auto bg-white p-6 rounded-lg shadow">
-    <h1 class="text-2xl font-bold mb-4">仙人指路分析</h1>
+  <div class="max-w-4xl mx-auto bg-white p-6 rounded-lg shadow">
+    <h1 class="text-2xl font-bold mb-6">仙人指路分析系統</h1>
 
     <!-- 模式選擇 -->
     <div class="mb-4">
@@ -92,10 +92,12 @@
     <button id="analyzeBtn" class="bg-blue-600 text-white px-4 py-2 rounded">送出分析</button>
 
     <!-- 結果區 -->
-    <div id="result" class="mt-6 whitespace-pre-wrap text-gray-800"></div>
+    <div id="result" class="mt-6 space-y-4"></div>
 
     <!-- 雷達圖 -->
-    <canvas id="chart" class="mt-4"></canvas>
+    <div class="mt-6">
+      <canvas id="chart"></canvas>
+    </div>
   </div>
 
   <script>
@@ -123,7 +125,18 @@
         body: JSON.stringify(body)
       });
       const data = await res.json();
-      document.getElementById("result").textContent = data.text;
+
+      // 把分析文字分段顯示
+      const resultEl = document.getElementById("result");
+      resultEl.innerHTML = "";
+      const textParts = data.text.split(/\n\n/);
+      textParts.forEach(part => {
+        if (!part.trim()) return;
+        const card = document.createElement("div");
+        card.className = "bg-gray-50 p-4 rounded border";
+        card.textContent = part.trim();
+        resultEl.appendChild(card);
+      });
 
       // 抓 JSON 區塊繪圖
       const match = data.text.match(/```json([\s\S]+?)```/);
