--- a/index.html
+++ b/index.html
@@ -2,116 +2,176 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>仙人指路分析介面</title>
+  <title>六獸人格互動分析系統</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background: #f5f5f5;
-    }
-    h1 {
-      color: #333;
-      text-align: center;
-    }
-    form {
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      max-width: 400px;
-      margin: 0 auto 20px auto;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    label {
-      display: block;
-      margin-top: 10px;
-      font-weight: bold;
-    }
-    select, input, button {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      background: #4CAF50;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #45a049;
-    }
-    #result {
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      max-width: 600px;
-      margin: 20px auto;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      white-space: pre-line;
-    }
+    body { font-family: sans-serif; margin: 20px; line-height: 1.6; }
+    h1 { margin-bottom: 0; }
+    h2 { margin-top: 30px; }
+    label { display: block; margin-top: 10px; }
+    select, textarea { width: 220px; margin-top: 5px; }
+    button { margin-top: 15px; padding: 8px 12px; }
+    pre { background: #f4f4f4; padding: 10px; white-space: pre-wrap; word-break: break-word; }
+    .person-block { border: 1px solid #ccc; padding: 10px; margin-top: 10px; }
   </style>
 </head>
 <body>
-  <h1>🌟 這是新版分析介面 🌟</h1>
+  <h1>六獸人格互動分析系統</h1>
 
   <form id="analyzeForm">
-    <label>六獸：</label>
-    <select name="beast">
-      <option value="青龍">青龍</option>
-      <option value="朱雀">朱雀</option>
-      <option value="勾陳">勾陳</option>
-      <option value="螣蛇">螣蛇</option>
-      <option value="白虎">白虎</option>
-      <option value="玄武">玄武</option>
-    </select>
+    <label>
+      模式：
+      <select name="mode" id="modeSelect">
+        <option value="single">單人模式</option>
+        <option value="dual">雙人模式</option>
+      </select>
+    </label>
 
-    <label>六親：</label>
-    <select name="kin">
-      <option value="父母">父母</option>
-      <option value="兄弟">兄弟</option>
-      <option value="子孫">子孫</option>
-      <option value="妻財">妻財</option>
-      <option value="官鬼">官鬼</option>
-    </select>
+    <!-- A 方 -->
+    <div class="person-block">
+      <h3>A 方</h3>
+      <label>
+        六獸：
+        <select name="aBeast" required>
+          <option value="">--請選擇--</option>
+          <option value="青龍">青龍</option>
+          <option value="朱雀">朱雀</option>
+          <option value="勾陳">勾陳</option>
+          <option value="螣蛇">螣蛇</option>
+          <option value="白虎">白虎</option>
+          <option value="玄武">玄武</option>
+        </select>
+      </label>
+      <label>
+        六親：
+        <select name="aKin" required>
+          <option value="">--請選擇--</option>
+          <option value="父母">父母</option>
+          <option value="兄弟">兄弟</option>
+          <option value="子孫">子孫</option>
+          <option value="妻財">妻財</option>
+          <option value="官鬼">官鬼</option>
+        </select>
+      </label>
+      <label>
+        地支：
+        <select name="aBranch" required>
+          <option value="">--請選擇--</option>
+          <option value="子">子</option>
+          <option value="丑">丑</option>
+          <option value="寅">寅</option>
+          <option value="卯">卯</option>
+          <option value="辰">辰</option>
+          <option value="巳">巳</option>
+          <option value="午">午</option>
+          <option value="未">未</option>
+          <option value="申">申</option>
+          <option value="酉">酉</option>
+          <option value="戌">戌</option>
+          <option value="亥">亥</option>
+        </select>
+      </label>
+    </div>
 
-    <label>地支：</label>
-    <input type="text" name="branch" placeholder="例如：子、丑、寅" />
+    <!-- B 方（雙人模式才顯示） -->
+    <div id="bBlock" class="person-block" style="display:none;">
+      <h3>B 方</h3>
+      <label>
+        六獸：
+        <select name="bBeast">
+          <option value="">--請選擇--</option>
+          <option value="青龍">青龍</option>
+          <option value="朱雀">朱雀</option>
+          <option value="勾陳">勾陳</option>
+          <option value="螣蛇">螣蛇</option>
+          <option value="白虎">白虎</option>
+          <option value="玄武">玄武</option>
+        </select>
+      </label>
+      <label>
+        六親：
+        <select name="bKin">
+          <option value="">--請選擇--</option>
+          <option value="父母">父母</option>
+          <option value="兄弟">兄弟</option>
+          <option value="子孫">子孫</option>
+          <option value="妻財">妻財</option>
+          <option value="官鬼">官鬼</option>
+        </select>
+      </label>
+      <label>
+        地支：
+        <select name="bBranch">
+          <option value="">--請選擇--</option>
+          <option value="子">子</option>
+          <option value="丑">丑</option>
+          <option value="寅">寅</option>
+          <option value="卯">卯</option>
+          <option value="辰">辰</option>
+          <option value="巳">巳</option>
+          <option value="午">午</option>
+          <option value="未">未</option>
+          <option value="申">申</option>
+          <option value="酉">酉</option>
+          <option value="戌">戌</option>
+          <option value="亥">亥</option>
+        </select>
+      </label>
+    </div>
 
-    <label>情境：</label>
-    <input type="text" name="context" placeholder="例如：愛情、事業、健康" />
+    <!-- 共用欄位 -->
+    <label>
+      情境 (Context)：
+      <select name="context" required>
+        <option value="">--請選擇--</option>
+        <option value="個性分析">個性分析</option>
+        <option value="愛情">愛情</option>
+        <option value="性愛">性愛</option>
+        <option value="跨部門協作">跨部門協作</option>
+        <option value="壓期交付專案">壓期交付專案</option>
+      </select>
+    </label>
 
-    <button type="submit">一鍵分析</button>
+    <label>
+      性愛細節 (SexDetail, 可選)：
+      <textarea name="sexDetail" rows="3" placeholder="例如：重點：互動節奏與默契；補充：需要更多語言交流"></textarea>
+    </label>
+
+    <button type="submit">送出分析</button>
   </form>
 
-  <div id="result">👉 分析結果會顯示在這裡</div>
+  <h2>分析結果</h2>
+  <pre id="result">尚未送出</pre>
 
   <script>
+    const modeSelect = document.getElementById("modeSelect");
+    const bBlock = document.getElementById("bBlock");
+
+    modeSelect.addEventListener("change", () => {
+      bBlock.style.display = modeSelect.value === "dual" ? "block" : "none";
+    });
+
     document.getElementById("analyzeForm").addEventListener("submit", async (e) => {
       e.preventDefault();
-
       const formData = new FormData(e.target);
-      const payload = {
-        beast: formData.get("beast"),
-        kin: formData.get("kin"),
-        branch: formData.get("branch"),
-        context: formData.get("context")
+      const body = {
+        mode: formData.get("mode"),
+        aBeast: formData.get("aBeast"),
+        aKin: formData.get("aKin"),
+        aBranch: formData.get("aBranch"),
+        bBeast: formData.get("bBeast"),
+        bKin: formData.get("bKin"),
+        bBranch: formData.get("bBranch"),
+        context: formData.get("context"),
+        sexDetail: formData.get("sexDetail") || ""
       };
 
-      try {
-        const res = await fetch("/api/analyze", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify(payload)
-        });
-
-        const data = await res.json();
-        document.getElementById("result").textContent = data.text || JSON.stringify(data, null, 2);
-      } catch (err) {
-        document.getElementById("result").textContent = "錯誤：" + err.message;
-      }
+      const res = await fetch("/api/analyze", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(body)
+      });
+      const data = await res.json();
+      document.getElementById("result").textContent = JSON.stringify(data, null, 2);
     });
   </script>
 </body>
