--- a/index.html
+++ b/index.html
@@ -1,177 +1,105 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8" />
-  <title>六獸人格互動分析系統</title>
+  <meta charset="utf-8" />
+  <title>六獸分析系統</title>
   <style>
-    body { font-family: sans-serif; margin: 20px; line-height: 1.6; }
-    h1 { margin-bottom: 0; }
-    h2 { margin-top: 30px; }
+    body { font-family: "Microsoft JhengHei", sans-serif; padding: 20px; }
+    h1 { color: #333; }
     label { display: block; margin-top: 10px; }
-    select, textarea { width: 220px; margin-top: 5px; }
-    button { margin-top: 15px; padding: 8px 12px; }
-    pre { background: #f4f4f4; padding: 10px; white-space: pre-wrap; word-break: break-word; }
-    .person-block { border: 1px solid #ccc; padding: 10px; margin-top: 10px; }
+    select, input, button { margin-top: 5px; padding: 5px; }
+    #result { margin-top: 20px; white-space: pre-wrap; background: #f5f5f5; padding: 10px; border-radius: 6px; }
   </style>
 </head>
 <body>
-  <h1>六獸人格互動分析系統</h1>
+  <h1>六獸分析系統2</h1>
 
   <form id="analyzeForm">
+    <!-- 六獸 -->
     <label>
-      模式：
-      <select name="mode" id="modeSelect">
-        <option value="single">單人模式</option>
-        <option value="dual">雙人模式</option>
+      我方六獸：
+      <select id="beast" required>
+        <option value="">請選擇</option>
+        <option value="青龍">青龍</option>
+        <option value="朱雀">朱雀</option>
+        <option value="勾陳">勾陳</option>
+        <option value="螣蛇">螣蛇</option>
+        <option value="白虎">白虎</option>
+        <option value="玄武">玄武</option>
       </select>
     </label>
 
-    <!-- A 方 -->
-    <div class="person-block">
-      <h3>A 方</h3>
-      <label>
-        六獸：
-        <select name="aBeast" required>
-          <option value="">--請選擇--</option>
-          <option value="青龍">青龍</option>
-          <option value="朱雀">朱雀</option>
-          <option value="勾陳">勾陳</option>
-          <option value="螣蛇">螣蛇</option>
-          <option value="白虎">白虎</option>
-          <option value="玄武">玄武</option>
-        </select>
-      </label>
-      <label>
-        六親：
-        <select name="aKin" required>
-          <option value="">--請選擇--</option>
-          <option value="父母">父母</option>
-          <option value="兄弟">兄弟</option>
-          <option value="子孫">子孫</option>
-          <option value="妻財">妻財</option>
-          <option value="官鬼">官鬼</option>
-        </select>
-      </label>
-      <label>
-        地支：
-        <select name="aBranch" required>
-          <option value="">--請選擇--</option>
-          <option value="子">子</option>
-          <option value="丑">丑</option>
-          <option value="寅">寅</option>
-          <option value="卯">卯</option>
-          <option value="辰">辰</option>
-          <option value="巳">巳</option>
-          <option value="午">午</option>
-          <option value="未">未</option>
-          <option value="申">申</option>
-          <option value="酉">酉</option>
-          <option value="戌">戌</option>
-          <option value="亥">亥</option>
-        </select>
-      </label>
-    </div>
-
-    <!-- B 方（雙人模式才顯示） -->
-    <div id="bBlock" class="person-block" style="display:none;">
-      <h3>B 方</h3>
-      <label>
-        六獸：
-        <select name="bBeast">
-          <option value="">--請選擇--</option>
-          <option value="青龍">青龍</option>
-          <option value="朱雀">朱雀</option>
-          <option value="勾陳">勾陳</option>
-          <option value="螣蛇">螣蛇</option>
-          <option value="白虎">白虎</option>
-          <option value="玄武">玄武</option>
-        </select>
-      </label>
-      <label>
-        六親：
-        <select name="bKin">
-          <option value="">--請選擇--</option>
-          <option value="父母">父母</option>
-          <option value="兄弟">兄弟</option>
-          <option value="子孫">子孫</option>
-          <option value="妻財">妻財</option>
-          <option value="官鬼">官鬼</option>
-        </select>
-      </label>
-      <label>
-        地支：
-        <select name="bBranch">
-          <option value="">--請選擇--</option>
-          <option value="子">子</option>
-          <option value="丑">丑</option>
-          <option value="寅">寅</option>
-          <option value="卯">卯</option>
-          <option value="辰">辰</option>
-          <option value="巳">巳</option>
-          <option value="午">午</option>
-          <option value="未">未</option>
-          <option value="申">申</option>
-          <option value="酉">酉</option>
-          <option value="戌">戌</option>
-          <option value="亥">亥</option>
-        </select>
-      </label>
-    </div>
-
-    <!-- 共用欄位 -->
+    <!-- 六親 -->
     <label>
-      情境 (Context)：
-      <select name="context" required>
-        <option value="">--請選擇--</option>
+      我方六親：
+      <select id="kin" required>
+        <option value="">請選擇</option>
+        <option value="父母">父母</option>
+        <option value="兄弟">兄弟</option>
+        <option value="子孫">子孫</option>
+        <option value="妻財">妻財</option>
+        <option value="官鬼">官鬼</option>
+      </select>
+    </label>
+
+    <!-- 地支 -->
+    <label>
+      我方地支：
+      <select id="branch" required>
+        <option value="">請選擇</option>
+        <option value="子">子</option>
+        <option value="丑">丑</option>
+        <option value="寅">寅</option>
+        <option value="卯">卯</option>
+        <option value="辰">辰</option>
+        <option value="巳">巳</option>
+        <option value="午">午</option>
+        <option value="未">未</option>
+        <option value="申">申</option>
+        <option value="酉">酉</option>
+        <option value="戌">戌</option>
+        <option value="亥">亥</option>
+      </select>
+    </label>
+
+    <!-- 情境 -->
+    <label>
+      分析情境：
+      <select id="context" required>
+        <option value="">請選擇</option>
         <option value="個性分析">個性分析</option>
         <option value="愛情">愛情</option>
         <option value="性愛">性愛</option>
+        <option value="人際關係協調">人際關係協調</option>
         <option value="跨部門協作">跨部門協作</option>
         <option value="壓期交付專案">壓期交付專案</option>
       </select>
     </label>
 
-    <label>
-      性愛細節 (SexDetail, 可選)：
-      <textarea name="sexDetail" rows="3" placeholder="例如：重點：互動節奏與默契；補充：需要更多語言交流"></textarea>
-    </label>
-
-    <button type="submit">送出分析</button>
+    <button type="submit">一鍵分析</button>
   </form>
 
-  <h2>分析結果</h2>
-  <pre id="result">尚未送出</pre>
+  <div id="result"></div>
 
   <script>
-    const modeSelect = document.getElementById("modeSelect");
-    const bBlock = document.getElementById("bBlock");
-
-    modeSelect.addEventListener("change", () => {
-      bBlock.style.display = modeSelect.value === "dual" ? "block" : "none";
-    });
-
     document.getElementById("analyzeForm").addEventListener("submit", async (e) => {
       e.preventDefault();
-      const formData = new FormData(e.target);
-      const body = {
-        mode: formData.get("mode"),
-        aBeast: formData.get("aBeast"),
-        aKin: formData.get("aKin"),
-        aBranch: formData.get("aBranch"),
-        bBeast: formData.get("bBeast"),
-        bKin: formData.get("bKin"),
-        bBranch: formData.get("bBranch"),
-        context: formData.get("context"),
-        sexDetail: formData.get("sexDetail") || ""
-      };
+      const beast = document.getElementById("beast").value;
+      const kin = document.getElementById("kin").value;
+      const branch = document.getElementById("branch").value;
+      const context = document.getElementById("context").value;
 
-      const res = await fetch("/api/analyze", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(body)
-      });
-      const data = await res.json();
-      document.getElementById("result").textContent = JSON.stringify(data, null, 2);
+      try {
+        const resp = await fetch("/api/analyze", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ aBeast: beast, aKin: kin, aBranch: branch, context })
+        });
+        const data = await resp.json();
+        document.getElementById("result").textContent = data.text || JSON.stringify(data, null, 2);
+      } catch (err) {
+        document.getElementById("result").textContent = "錯誤：" + err;
+      }
     });
   </script>
 </body>
