--- a/index.html
+++ b/index.html
@@ -1,189 +1,102 @@
-<!doctype html>
-<html lang="zh-Hant">
+<!DOCTYPE html>
+<html lang="zh-TW">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>六獸分析系統</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <style>
-    @media print {
-      body { background:#fff !important; }
-      .no-print { display:none !important; }
-    }
-  </style>
-</head>
-<body class="bg-gray-50 text-gray-800">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>職場關係分析工具</title>
+    <style>
+        body { font-family: Arial, sans-serif; padding: 20px; background-color: #f5f5f5; }
+        .container { max-width: 600px; margin: 0 auto; background: #fff; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+        .section { margin-bottom: 20px; }
+        select, button { padding: 10px; margin: 5px 0; }
+        .radar-chart { width: 400px; height: 400px; margin: 20px auto; }
+        #result { margin-top: 20px; }
+        .loading { display: none; text-align: center; }
+    </style>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js"></script>
+    <script>
+        // 初始六親和六獸選項
+        const liqinOptions = ['兄弟', '子孫', '妻財', '官鬼', '父母'];
+        const liushouOptions = ['青龍', '朱雀', '勾陳', '螣蛇', '白虎', '玄武'];
 
-  <div class="p-6 max-w-4xl mx-auto">
-    <h1 class="text-2xl font-bold mb-4">六獸 × 六親 × 地支 分析系統</h1>
+        function updateOptions(person, otherPersonPrefix) {
+            const liqinSelect = document.getElementById(`${person}-liqin`);
+            const liushouSelect = document.getElementById(`${person}-liushou`);
+            const otherLiqin = document.getElementById(`${otherPersonPrefix}-liqin`).value;
+            const otherLiushou = document.getElementById(`${otherPersonPrefix}-liushou`).value;
 
-    <!-- 模式切換 -->
-    <div class="mb-4">
-      <label class="mr-2 font-bold">分析模式：</label>
-      <select id="mode" class="border rounded p-2">
-        <option value="single">單人分析</option>
-        <option value="dual">雙人分析</option>
-      </select>
-    </div>
+            liqinSelect.innerHTML = '';
+            liushouSelect.innerHTML = '';
+            liqinOptions.forEach(option => {
+                if (option !== otherLiqin) {
+                    const opt = document.createElement('option');
+                    opt.value = option;
+                    opt.text = option;
+                    liqinSelect.appendChild(opt);
+                }
+            });
+            liushouOptions.forEach(option => {
+                if (option !== otherLiushou) {
+                    const opt = document.createElement('option');
+                    opt.value = option;
+                    opt.text = option;
+                    liushouSelect.appendChild(opt);
+                }
+            });
+        }
 
-    <!-- 人物 A -->
-    <div class="grid grid-cols-3 gap-2 mb-4">
-      <div>
-        <label>六獸(A)</label>
-        <select id="aBeast" class="w-full border rounded p-2">
-          <option>青龍</option><option>朱雀</option><option>勾陳</option>
-          <option>螣蛇</option><option>白虎</option><option>玄武</option>
-        </select>
-      </div>
-      <div>
-        <label>六親(A)</label>
-        <select id="aKin" class="w-full border rounded p-2">
-          <option>父母</option><option>兄弟</option><option>子孫</option>
-          <option>妻財</option><option>官鬼</option>
-        </select>
-      </div>
-      <div>
-        <label>地支(A)</label>
-        <select id="aBranch" class="w-full border rounded p-2">
-          <option>子</option><option>丑</option><option>寅</option><option>卯</option>
-          <option>辰</option><option>巳</option><option>午</option><option>未</option>
-          <option>申</option><option>酉</option><option>戌</option><option>亥</option>
-        </select>
-      </div>
-    </div>
+        function initializeSelects() {
+            updateOptions('person1', 'person2');
+            updateOptions('person2', 'person1');
+        }
 
-    <!-- 人物 B -->
-    <div id="dualFields" class="grid grid-cols-3 gap-2 mb-4 hidden">
-      <div>
-        <label>六獸(B)</label>
-        <select id="bBeast" class="w-full border rounded p-2">
-          <option>青龍</option><option>朱雀</option><option>勾陳</option>
-          <option>螣蛇</option><option>白虎</option><option>玄武</option>
-        </select>
-      </div>
-      <div>
-        <label>六親(B)</label>
-        <select id="bKin" class="w-full border rounded p-2">
-          <option>父母</option><option>兄弟</option><option>子孫</option>
-          <option>妻財</option><option>官鬼</option>
-        </select>
-      </div>
-      <div>
-        <label>地支(B)</label>
-        <select id="bBranch" class="w-full border rounded p-2">
-          <option>子</option><option>丑</option><option>寅</option><option>卯</option>
-          <option>辰</option><option>巳</option><option>午</option><option>未</option>
-          <option>申</option><option>酉</option><option>戌</option><option>亥</option>
-        </select>
-      </div>
-    </div>
+        function analyzeRelationship() {
+            const person1Liqin = document.getElementById('person1-liqin').value;
+            const person1Liushou = document.getElementById('person1-liushou').value;
+            const person1Dizhi = document.getElementById('person1-dizhi').value;
+            const person2Liqin = document.getElementById('person2-liqin').value;
+            const person2Liushou = document.getElementById('person2-liushou').value;
+            const person2Dizhi = document.getElementById('person2-dizhi').value;
 
-    <!-- 情境選單 -->
-    <div class="mb-4">
-      <label class="mr-2 font-bold">情境：</label>
-      <select id="context" class="border rounded p-2">
-        <option>職場互動</option>
-        <option>愛情</option>
-        <option>性愛</option>
-        <option>健康</option>
-      </select>
-    </div>
+            // 簡單的本地模擬分析（基於六親和六獸的組合）
+            let compatibility = 60, trust = 65, pace = 70, innovation = 55, communication = 60;
+            if (person1Liqin === '兄弟' && person2Liqin === '子孫') {
+                compatibility += 10; trust += 5;
+            } else if (person1Liushou === '青龍' && person2Liushou === '白虎') {
+                pace += 15; communication -= 5;
+            }
 
-    <!-- 功能按鈕 -->
-    <div class="mb-4 space-x-2">
-      <button onclick="runAnalyze()" class="px-4 py-2 bg-blue-600 text-white rounded">開始分析</button>
-      <button onclick="toggleBg()" class="px-4 py-2 bg-gray-600 text-white rounded">切換背景</button>
-      <button onclick="window.print()" class="px-4 py-2 bg-green-600 text-white rounded no-print">列印</button>
-    </div>
+            // 顯示分析結果
+            document.getElementById('result').innerText = `分析結果：\n- 雙方信息：\n  甲方: ${person1Liqin}, ${person1Liushou}, ${person1Dizhi}\n  乙方: ${person2Liqin}, ${person2Liushou}, ${person2Dizhi}\n- 職場關係評估:\n  - 相容性: ${compatibility}\n  - 信任度: ${trust}\n  - 節奏配合: ${pace}\n  - 創新能力: ${innovation}\n  - 溝通效率: ${communication}`;
 
-    <!-- 分析結果 -->
-    <div id="result" class="p-4 border rounded bg-white">
-      <h2 class="text-xl font-bold mb-2">分析結果：</h2>
-      <pre id="output" class="whitespace-pre-wrap"></pre>
-      <div id="healthTips" class="mt-4 text-red-700 font-semibold"></div>
-      <canvas id="radarChart" class="mt-4"></canvas>
-    </div>
-  </div>
+            // 繪製雷達圖
+            const ctx = document.getElementById('radarChart').getContext('2d');
+            if (window.myChart) window.myChart.destroy();
+            window.myChart = new Chart(ctx, {
+                type: 'radar',
+                data: {
+                    labels: ['相容性', '信任度', '節奏配合', '創新能力', '溝通效率'],
+                    datasets: [{
+                        label: '職場關係',
+                        data: [compatibility, trust, pace, innovation, communication],
+                        backgroundColor: 'rgba(54, 162, 235, 0.2)',
+                        borderColor: 'rgba(54, 162, 235, 1)',
+                        borderWidth: 2
+                    }]
+                },
+                options: {
+                    scales: { r: { beginAtZero: true, max: 100 } }
+                }
+            });
+        }
 
-<script>
-let bgToggle = false;
+        document.querySelectorAll('select').forEach(select => {
+            select.addEventListener('change', () => {
+                updateOptions(select.id.startsWith('person1') ? 'person1' : 'person2', select.id.startsWith('person1') ? 'person2' : 'person1');
+            });
+        });
 
-// 模式切換 → 顯示/隱藏人物B
-document.getElementById("mode").addEventListener("change", e=>{
-  document.getElementById("dualFields").style.display = 
-    e.target.value === "dual" ? "grid" : "none";
-});
-
-// 切換背景顏色
-function toggleBg(){
-  bgToggle = !bgToggle;
-  document.body.className = bgToggle ? "bg-yellow-100" : "bg-gray-50";
-}
-
-// 執行分析
-async function runAnalyze(){
-  const mode = document.getElementById("mode").value;
-  const context = document.getElementById("context").value;
-
-  const data = {
-    mode,
-    aBeast: document.getElementById("aBeast").value,
-    aKin: document.getElementById("aKin").value,
-    aBranch: document.getElementById("aBranch").value,
-    bBeast: document.getElementById("bBeast")?.value,
-    bKin: document.getElementById("bKin")?.value,
-    bBranch: document.getElementById("bBranch")?.value,
-    context
-  };
-
-  const res = await fetch("/api/analyze", {
-    method:"POST",
-    headers:{ "Content-Type":"application/json" },
-    body: JSON.stringify(data)
-  });
-  const json = await res.json();
-  document.getElementById("output").textContent = json.text || JSON.stringify(json);
-
-  // 顯示健康建議
-  if(context === "健康"){
-    const branch = document.getElementById("aBranch").value;
-    let tips = "💡 健康湯藥建議：";
-    if(["子","亥"].includes(branch)) tips += " 腎水偏弱，可用《安迪湯》《六味地黃丸》補腎。";
-    else if(["寅","卯"].includes(branch)) tips += " 木氣不足，可用《四神湯》《加味逍遙散》調肝脾。";
-    else if(["巳","午"].includes(branch)) tips += " 火氣旺，可用《酸棗仁湯》《清心蓮子飲》養心安神。";
-    else if(["申","酉"].includes(branch)) tips += " 金氣偏弱，可用《桑菊飲》《銀翹散》護肺氣。";
-    else if(["丑","辰","未","戌"].includes(branch)) tips += " 土氣不足，可用《補中益氣湯》《香砂六君子湯》健脾胃。";
-    document.getElementById("healthTips").textContent = tips;
-  } else {
-    document.getElementById("healthTips").textContent = "";
-  }
-
-  // 雷達圖：雙人模式才顯示
-  if(mode==="dual" && json.scores){
-    renderRadar(json.scores);
-  }
-}
-
-let radarChart;
-function renderRadar(scores){
-  const ctx = document.getElementById("radarChart").getContext("2d");
-  if(radarChart) radarChart.destroy();
-  radarChart = new Chart(ctx, {
-    type:"radar",
-    data:{
-      labels:["契合","溝通","節奏","責任","信任","創新"],
-      datasets:[{
-        label:"雙人互動分數",
-        data:[scores.fit, scores.comm, scores.pace, scores.account, scores.trust, scores.innov],
-        fill:true,
-        borderColor:"rgb(54,162,235)",
-        backgroundColor:"rgba(54,162,235,0.2)"
-      }]
-    }
-  });
-}
-</script>
-
+        window.onload = initializeSelects;
+    </script>
 </body>
 </html>
