--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </header>
 
         <header class="space-y-1 no-print">
-            <h1 class="text-2xl font-bold">仙人指路｜神獸七十二型人格 (V47.0 最終穩定版)</h1>
+            <h1 class="text-2xl font-bold">仙人指路｜神獸七十二型人格 (V上面寫49.0 最終穩定版)</h1>
             <p class="text-slate-500 text-sm">✨ **已修復邏輯錯誤與品牌標頭顯示**</p>
         </header>
 
