--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>仙人指路神獸七十二型人格 - 分析報告 (V49.0 最終穩定版)</title>
+    <title>仙人指路神獸七十二型人格 - 分析報告 (V50.0 最終穩定版)</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/showdown@4.4.1/dist/showdown.min.js"></script>
 
@@ -116,8 +116,8 @@
         </header>
 
         <header class="space-y-1 no-print">
-            <h1 class="text-2xl font-bold">仙人指路｜神獸七十二型人格 (V上面寫49.0 最終穩定版)</h1>
-            <p class="text-slate-500 text-sm">✨ **已修復邏輯錯誤與品牌標頭顯示**</p>
+            <h1 class="text-2xl font-bold">仙人指路｜神獸七十二型人格 (V47.0 最終穩定版)</h1>
+            <p class="text-slate-500 text-sm">✨ **已修復邏輯錯誤，專注於實戰情境輸出**</p>
         </header>
 
         <div class="flex gap-4 flex-wrap no-print">
@@ -378,7 +378,7 @@
         }
         
         // --- V35.0 簡化：現在只提取文本，不再提取分數 ---
-        function formatOutput(text) {
+        function formatOutput(text, payload) {
             if (!text) return { html: '<p class="text-slate-500">無分析結果。</p>', scores: null, tags: null, webScoresHTML: '<p class="text-slate-500">無法獲取分析內容。</p>' };
 
             let scores = null;
@@ -612,8 +612,10 @@
                 }
                 
                 // ⭐ V43.1 核心修復：實戰對話內容強化 ⭐
-                if (payload.context === '銷售話術' || payload.context === '靈性健康話術') {
-                    promptText += `\n**【情境模擬要求】**：請根據雙方的六獸和六親特性，模擬一段**長且精采的銷售對話腳本** (A是銷售/講師，B是客戶/學員)，內容必須包含至少一個客戶的反對意見或主要問題，以及A如何說服/引導B的具體話術。請用 Markdown 標記，例如 **A:** 這是我的話術。 **B:** 這是客戶的反駁。`;
+                if (payload.context === '銷售話術' && payload.mode === 'dual') {
+                    promptText += `\n**【情境模擬要求】**：請根據雙方的六獸和六親特性，模擬一段**長且精采的銷售對話腳本** (A是銷售，B是客戶)，內容必須包含至少一個客戶的反對意見或主要問題，以及A如何說服/引導B的具體話術。請用 Markdown 標記，例如 **A:** 這是我的話術。 **B:** 這是客戶的反駁。`;
+                } else if (payload.context === '靈性健康話術') {
+                    promptText += `\n**【情境模擬要求】**：請根據我方六獸和六親的特性，模擬一段**健康指導話術** (A是講師，B是學員)，內容須包含對學員五行失衡的分析、可能出現的身體問題，以及講師如何說服/引導學員進行身體調整的具體話術。請用 Markdown 標記，例如 **A:** 這是我的分析。 **B:** 這是學員的提問。`;
                 } else if (payload.context === '性愛' && payload.mode === 'dual') {
                     promptText += `\n**【情境模擬要求】**：請根據雙方的六獸和六親特性，模擬一段**高張力、大膽且精采的私密對話腳本**。使用 Markdown 區塊引言 (>) 符號來區分對話。`;
                 }
